feat: adds Dockerfile and containers for kafka producer and consumer

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,4 @@
 services:
-  # Kafka broker
   kafka:
     image: apache/kafka:latest
     container_name: kafka
@@ -40,7 +39,6 @@ services:
       retries: 5
       start_period: 20s
   
-  # Kafka-ui
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
@@ -55,7 +53,6 @@ services:
       kafka:
         condition: service_healthy
 
-  # Cassandra
   cassandra:
     image: cassandra:4.1
     container_name: cassandra
@@ -75,7 +72,6 @@ services:
       timeout: 10s
       retries: 5
     
-  # init-db
   init-cassandra:
     image: cassandra:4.1
     depends_on:
@@ -87,6 +83,40 @@ services:
       - iot_net
     command: >
       bash -c "cqlsh cassandra -f /init.cql"
+  
+  producer:
+    build:
+      context: .
+      dockerfile: Dockerfile.app
+    container_name: producer
+    networks:
+      - iot_net
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+    depends_on:
+      kafka:
+        condition: service_healthy
+    command: python iot_producer.py
+    restart: on-failure
+
+  consumer:
+    build:
+      context: .
+      dockerfile: Dockerfile.app
+    # No container_name to allow scaling
+    networks:
+      - iot_net
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+      - CASSANDRA_HOST=cassandra
+    depends_on:
+      kafka:
+        condition: service_healthy
+      init-cassandra:
+        condition: service_completed_successfully
+    command: python iot_consumer.py
+    restart: on-failure
+
 networks:
   iot_net:
     driver: bridge
