fix: adds PYTHONUNBUFFERED environment variable to producer and consumer services

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -105,6 +105,7 @@ services:
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
       - PRODUCER_TARGET_RATE=3500  # Target messages per second
+      - PYTHONUNBUFFERED=1
     depends_on:
       kafka:
         condition: service_healthy
@@ -121,6 +122,7 @@ services:
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
       - CASSANDRA_HOST=cassandra
+      - PYTHONUNBUFFERED=1
     depends_on:
       kafka:
         condition: service_healthy
